FLUID-5314: Fixed spacing and formatting in CSS.

--- a/src/components/overviewPanel/css/OverviewPanel.css
+++ b/src/components/overviewPanel/css/OverviewPanel.css
@@ -149,7 +149,7 @@
     outline: 0.2em solid rgba(51,51,51,.96);
 }
 
-.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:before{
+.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:before {
     content: "\e600";
 }
 
@@ -171,11 +171,10 @@
     visibility: hidden;
 }
 
-.fl-overviewPanel-container.fl-overviewPanel-hidden{
+.fl-overviewPanel-container.fl-overviewPanel-hidden {
     /* Make this container essentially hidden. Some dimensions need to be given to avoid a problem with rendering on Safari. */
     width: 0.01em; 
     height: 0.01em; 
-    
     transition: all 0.2s linear; /* This transition creates the desired sliding effect. */ 
 }
 
@@ -222,7 +221,7 @@
     padding-top: 0.5em;
 }
 
-.fl-overviewPanel .fl-overviewPanel-links ul{
+.fl-overviewPanel .fl-overviewPanel-links ul {
     margin: 1.6em 0 1em 0;
     padding-left: 0;
 }
@@ -254,13 +253,13 @@
 
 .fl-overviewPanel .fl-overviewPanel-links-icon-api:before,
 .fl-overviewPanel .fl-overviewPanel-links-icon-github:before,
-.fl-overviewPanel .fl-overviewPanel-links-icon-design:before{
+.fl-overviewPanel .fl-overviewPanel-links-icon-design:before {
     position: relative;
     top: 0.35em;
     font-size: 1.2em;
 }
 
-.fl-overviewPanel .fl-overviewPanel-links-icon-api:before{
+.fl-overviewPanel .fl-overviewPanel-links-icon-api:before {
     content: "\e602";
 }
 
@@ -276,7 +275,7 @@
     display:block;
 }
 
-.fl-overviewPanel .fl-overviewPanel-feedback-link a{
+.fl-overviewPanel .fl-overviewPanel-feedback-link a {
     color: #FFCC00;
 }
 
@@ -327,22 +326,27 @@
     color: #fff;
 }
 
-.fl-theme-bw .fl-overviewPanel a { text-decoration: underline; }
+.fl-theme-bw .fl-overviewPanel a {
+    text-decoration: underline;
+}
 
-.fl-theme-bw .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+.fl-theme-bw .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.2em solid #fff;
 }
 
 .fl-theme-bw .fl-overviewPanel *:focus,
 .fl-theme-bw .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
-.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus  {
+.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
     outline: 0.3em solid #000;
 }
 
 .fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.1em solid #000;
 }
-.fl-theme-bw .fl-overviewPanel-instructions { border: 0.2em solid #000; }
+
+.fl-theme-bw .fl-overviewPanel-instructions {
+    border: 0.2em solid #000;
+}
 
 
 /* white on black */
@@ -367,15 +371,17 @@
     color: #000;
 }
 
-.fl-theme-wb .fl-overviewPanel a { text-decoration: underline; }
+.fl-theme-wb .fl-overviewPanel a {
+    text-decoration: underline;
+}
 
-.fl-theme-wb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+.fl-theme-wb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.2em solid #000;
 }
 
 .fl-theme-wb .fl-overviewPanel *:focus,
 .fl-theme-wb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
-.fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus  {
+.fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
     outline: 0.3em solid #fff;
 }
 
@@ -383,7 +389,9 @@
     outline: 0.1em solid #fff;
 }
 
-.fl-theme-wb .fl-overviewPanel-instructions { border: 0.2em solid #fff; }
+.fl-theme-wb .fl-overviewPanel-instructions {
+    border: 0.2em solid #fff;
+}
 
 
 /* Low contrast: light grey on dark grey */
@@ -408,9 +416,11 @@
     color: #555;
 }
 
-.fl-theme-lgdg .fl-overviewPanel a { text-decoration: underline; }
+.fl-theme-lgdg .fl-overviewPanel a {
+    text-decoration: underline;
+}
 
-.fl-theme-lgdg .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+.fl-theme-lgdg .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.2em solid #555;
 }
 
@@ -424,7 +434,9 @@
     outline: 0.1em solid #bdbdbb;
 }
 
-.fl-theme-lgdg .fl-overviewPanel-instructions { border: 0.2em solid #bdbdbb; }
+.fl-theme-lgdg .fl-overviewPanel-instructions {
+    border: 0.2em solid #bdbdbb;
+}
 
 /* Yellow on Black */
 .fl-theme-yb .fl-overviewPanel,
@@ -448,23 +460,26 @@
     color: #000;
 }
 
-.fl-theme-yb .fl-overviewPanel a { text-decoration: underline; }
+.fl-theme-yb .fl-overviewPanel a {
+    text-decoration: underline;
+}
 
-.fl-theme-yb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+.fl-theme-yb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.2em solid #000;
 }
 
 .fl-theme-yb .fl-overviewPanel *:focus,
 .fl-theme-yb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
-     outline: 0.3em solid #FFFF00; 
- }
+    outline: 0.3em solid #FFFF00; 
+}
  
 .fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.1em solid #FFFF00;
 }
 
-.fl-theme-yb .fl-overviewPanel-instructions { border: 0.2em solid #FFFF00; }
+.fl-theme-yb .fl-overviewPanel-instructions {
+    border: 0.2em solid #FFFF00; }
 
 /* Black on Yellow */
 .fl-theme-by .fl-overviewPanel,
@@ -472,7 +487,7 @@
 .fl-theme-by .fl-overviewPanel a,
 .fl-theme-by .fl-overviewPanel .fl-overviewPanel-links-icon-api,
 .fl-theme-by .fl-overviewPanel .fl-overviewPanel-links-icon-github,
-.fl-theme-by .fl-overviewPanel .fl-overviewPanel-links-icon-design  {
+.fl-theme-by .fl-overviewPanel .fl-overviewPanel-links-icon-design {
     color: #000;
     background-color: #FFFF00;
 }
@@ -496,7 +511,7 @@
     text-decoration: underline;
 }
 
-.fl-theme-by .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+.fl-theme-by .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
     outline: 0.2em solid #FFFF00;
 }
 
@@ -510,4 +525,6 @@
     outline: 0.1em solid #000;
 }
 
-.fl-theme-by .fl-overviewPanel-instructions { border: 0.2em solid #000; }
+.fl-theme-by .fl-overviewPanel-instructions {
+    border: 0.2em solid #000;
+}
